ID:FPCO-3497;DONE:100;HOURS:2; fixed close icon overlapping with text

--- a/src/components/NDropdown/NDropdown.less
+++ b/src/components/NDropdown/NDropdown.less
@@ -46,7 +46,7 @@
     }
     input[type="search"]::-webkit-search-cancel-button {
       position: relative;
-      right: 10px;
+      // right: 10px;
       font-size: @BaseFontSize + 4px;
       cursor: pointer;
     }
