--- a/src/components/NInput/NInput.less
+++ b/src/components/NInput/NInput.less
@@ -90,7 +90,7 @@
 
 input[type="search"]::-webkit-search-cancel-button {
   position: relative;
-  right: 10px;
+  // right: 10px;
   font-size: @BaseFontSize + 4px;
   cursor: pointer;
 }
